2016-11-11  Bruno Haible  <bruno@clisp.org>

	Modernize: Remove support for Amiga UNIX.
	* lispbibl.d (UNIX_AMIX): Remove macro.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Modernize: Remove support for Apple A/UX.
	* lispbibl.d (UNIX_AUX): Remove macro.
	* unix.d: Remove Apple A/UX workaround.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Modernize: Remove support for Unix SYSV from around 1995.
	* lispbibl.d (UNIX_SYSV_USL, UNIX_SYSV_UHC_1, UNIX_SYSV_PTX): Remove
	macros.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Modernize: Remove support for SINIX.
	* lispbibl.d (UNIX_SINIX): Remove macro.
	(SINGLEMAP_MEMORY): Remove SINIX workaround.
	* src/spvw_mmap.d (mmap_init_pagesize): Likewise.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Modernize: Remove support for Ultrix.
	* lispbibl.d (UNIX_DEC_ULTRIX, UNIX_DEC_ULTRIX_GCCBUG): Remove macros.
	* control.d: Remove Ultrix GCC workarounds.
	* array.d: Likewise.
	* flo_rest.d: Likewise.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Modernize blurbs and comments.
	* COPYRIGHT: Update year.
	* SUMMARY: Remove outdated infos. Use https URLs where available.
	* unix/PLATFORMS: Trim list of platforms and hints. Mention
	GENERIC64_HEAPCODES.
	* lispbibl.d: Remove comment about old (now all museum) platforms.
	
2016-11-11  Bruno Haible  <bruno@clisp.org>

	Make GENERIC64{A,B}_HEAPCODES work with -falign-functions=4.
	* lispbibl.d (machinep) [GENERIC64A_HEAPCODES, GENERIC64B_HEAPCODES]:
	Define in such a way that machine pointers only need to be aligned
	mod 4.
	(C_CODE_ALIGNMENT) [GENERIC64A_HEAPCODES, GENERIC64B_HEAPCODES]: Don't
	redefine to 8.
	(LINUX_NOEXEC_HEAPCODES, GENERIC64A_HEAPCODES, GENERIC64B_HEAPCODES):
	Update comments.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Fix weird errors when rebuilding 'base' after having changed CFLAGS.
	* makemake.in (clean1): Remove also the .o files in the BASE_MODULES.

2016-11-11  Bruno Haible  <bruno@clisp.org>
